fixed ultra wide images going out of screen bounds

--- a/view/view.css
+++ b/view/view.css
@@ -27,6 +27,7 @@
 #centerImage{
     max-height: -webkit-fill-available;
     height: auto;
+    max-width: inherit;
 }
 
 #replaceForm{
